Align pagination. Fix #8

--- a/app/assets/stylesheets/admin/base.scss
+++ b/app/assets/stylesheets/admin/base.scss
@@ -27,11 +27,7 @@ body {
 }
 
 .pagination-container {
-  .pagination {
-    justify-content: center;
-    border-top: 1px solid #EEE;
-    padding-top: 15px;
-  }
+  text-align: center;
 }
 
 .page-title {
